--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/schedule": "^6.0.0",
     "@nestjs/swagger": "^11.1.5",
+    "@sentry/nestjs": "^9.23.0",
+    "@sentry/node": "^9.23.0",
     "bcrypt": "^5.1.1",
     "class-validator": "^0.14.1",
     "mongoose": "^8.13.2",
